package org.parcial_23_05_23;

public interface Material {
    void usar(Material materialAUsar);

    int getCantidad();
}
